@@ -361,3 +361,49 @@
     (:method-combination dont-overevaluate)
     (:method ((x t)) x))
   (assert-error (dont-overevaluate-gf 1)))
+
+;;; An example (non-normative) from the Standard, which we interpret
+;;; as failing the requirement not to have multiple methods with the
+;;; same specializers in the same method group.
+
+(defun positive-integer-qualifier-p (method-qualifiers)
+  (and (= (length method-qualifiers) 1)
+       (typep (first method-qualifiers) '(integer 0 *))))
+
+(define-method-combination example-method-combination ()
+  ((methods positive-integer-qualifier-p))
+  `(progn ,@(mapcar #'(lambda (method)
+                        `(call-method ,method))
+                    (stable-sort methods #'<
+                                 :key #'(lambda (method)
+                                          (first (method-qualifiers method)))))))
+
+(defgeneric example-method-combination-gf (x s)
+  (:method-combination example-method-combination)
+  (:method 1 (x (s stream)) (format s "~&1: ~A~%" x))
+  (:method 2 (x (s stream)) (format s "~&2: ~A~%" x)))
+
+(with-test (:name :clhs-example-method-combination-no-order)
+  (assert-error (example-method-combination-gf 1 (make-broadcast-stream))))
+
+;;; The same example as above, modified to declare (using a
+;;; non-standard extension) that the order it receives methods in the
+;;; group does not matter.
+
+(define-method-combination example-method-combination-order-nil ()
+  ((methods positive-integer-qualifier-p :order nil))
+  `(progn ,@(mapcar #'(lambda (method)
+                        `(call-method ,method))
+                    (stable-sort methods #'<
+                                 :key #'(lambda (method)
+                                          (first (method-qualifiers method)))))))
+
+(defgeneric example-method-combination-order-nil-gf (x s)
+  (:method-combination example-method-combination-order-nil)
+  (:method 1 (x (s stream)) (format s "1: ~A and " x))
+  (:method 2 (x (s stream)) (format s "2: ~A" x)))
+
+(with-test (:name :clhs-example-method-combination-order-nil)
+  (let ((string (with-output-to-string (s)
+                  (example-method-combination-order-nil-gf t s))))
+    (assert (string= string "1: T and 2: T"))))
