@@ -1,6 +1,11 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes relative to sbcl-2.3.1:
+  * incompatible change: the :ORDER long-form-option in
+    DEFINE-METHOD-COMBINATION accepts NIL as well as :MOST-SPECIFIC-FIRST and
+    :MOST-SPECIFIC-LAST.  A value of NIL implies no particular ordering of the
+    methods, and so disables checks of multiple methods with the same
+    specializers in that group.
   * bug fix: evaluate the :ORDER long-form-option in DEFINE-METHOD-COMBINATION
     properly, avoiding an infinite loop in DEFINE-METHOD-COMBINATION if the
     :ORDER argument leads to a cycle of compile-time constants.
